# immunization-defaulter-risk-engine

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: epi_schedule.py  epi_schedule.yaml  model_config.yaml
configs/: base.yaml  database.yaml  features.yaml  labeling.yaml  model.yaml  paths.yaml
data/processed/: analytical_dataset.parquet  feature_names.pkl  preprocessor.pkl  run_result.json
notebooks/: 01_data_audit.ipynb  02_label_design.ipynb  03_feature_review.ipynb  04_modeling.ipynb  05_shap_explainability.ipynb
reports/: drift_report.csv  drift_report.html
reports/shap/: patient_high.json  patient_low.json  patient_medium.json  shap_importance.csv
sql/extraction/: extract_active_chps.sql  extract_homevisit.sql  extract_iz.sql  extract_population.sql  extract_supervision.sql
sql/marts/: mart_area_month_context.sql  mart_child_observation.sql  mart_chw_month_context.sql  mart_model_base.sql
sql/staging/: stg_active_chps.sql  stg_homevisit.sql  stg_iz.sql  stg_population.sql  stg_supervision.sql
src/: __init__.py  main.py
src/api/: main.py
src/cleaning/: chw_cleaning.py  homevisit_cleaning.py  iz_cleaning.py  population_cleaning.py  standardize.py  supervision_cleaning.py
src/etl/: cleaner.py  loader.py  merger.py
src/explainability/: reason_codes.py  shap_explainer.py  shap_global.py  shap_local.py
src/ingestion/: db.py  (+2 more)
tests/: test_business_rules.py  test_cleaning.py  test_features.py  test_labeling.py  test_modeling.py  test_pipeline.py
(+32 files in other folders)
