[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immunization-defaulter-risk-engine"
version = "0.1.0"
description = "End-to-end immunization defaulter prediction engine with XGBoost and SHAP"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Erick Yegon"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
